# dev-utils

./: README.md  csvout  get-largest-files  knitrmd  pull-git-log  watch-sbatch
.ipynb_checkpoints/: README-checkpoint.md
dean/: pyproject.toml  start-server.sh
dean/hand/: system_prompt.md
dean/hand/.ipynb_checkpoints/: system_prompt-checkpoint.md
dean/src/: client.py  dean.py  server.py  tools.py
dean/src/.ipynb_checkpoints/: dean-checkpoint.py  tools-checkpoint.py
